--- a/dashboards/chef.html
+++ b/dashboards/chef.html
@@ -9,8 +9,8 @@
 <body>
  
   <header id="head">
-    <p>Your favorite Dishes, Delivered to you</p>
-    <button id="chef-login" onclick="chef()"> Login as chef</button>
+    <p>Welcome Chef!</p>
+    <button id="chef-login" onclick="user()"> Login as User</button>
   </header>
 
 
@@ -31,12 +31,12 @@
     </div>
   </main>
   <script>
-    var c=document.getElementById("chef-login");
-    c.addEventListener("click", function() {
-    window.location.href = "chef.html";
+    var d=document.getElementById("chef-login");
+    d.addEventListener("click", function() {
+    window.location.href = "login.html"; 
   });
+    
+    
   </script>
-
- 
 </body>
 </html>
