--- a/dashboards/login.html
+++ b/dashboards/login.html
@@ -35,6 +35,51 @@
     c.addEventListener("click", function() {
     window.location.href = "chef.html";
   });
+  const loginForm = document.getElementById("login-user");
+
+loginForm.addEventListener("submit", async function(event) {
+  event.preventDefault(); 
+
+  const mobile = document.getElementById("ph-no").value;
+  const password = document.getElementById("pass").value;
+
+  
+  const credentials = {
+    mobile: mobile,
+    password: password
+  };
+
+  try {
+    const response = await login(credentials); 
+    console.log(response);
+
+    if (response.success) {
+      alert("Login successful!");
+      
+      window.location.href = "register.html";
+    } else {
+      alert("Login failed: " + response.message);
+    }
+  } catch (error) {
+    console.error("Error:", error);
+    alert("Incorrect Password or mobile number");
+  }
+});
+
+
+const login = async (credentials) => {
+  const response = await fetch('https://wild-ruth-butterfly-charter.trycloudflare.com/api/login', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify(credentials)
+  });
+  const data = await response.json();
+  if (data.success) {
+    localStorage.setItem('token', data.token);
+  }
+  return data;
+};
+  
   </script>
 
  
